--- a/практика/100 примеров/100 questions (algorythms with python).ipynb
+++ b/практика/100 примеров/100 questions (algorythms with python).ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 100 практических задач с python\n",
+    "# 100 практических задач создания различных алгоритмов в python\n",
     "<p>Курс \"Большие данные и машинное обучение\" ООО \"Сайберлимфа\"</p>\n",
     "\n",
     "Авторы\n",
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Документ состоит из 100 сложных задач, решаемых с помощью Python и соответствующих библиотек.\n",
+    "Документ состоит из 100 (в перспективе ;-)) алгоритмов, решающих различные задачи, описываемые с помощью Python и соответствующих библиотек.\n",
     "\n",
     "Для удобства задачи разбиты на группы, к которым можно быстро перейти через <a href='#toc'>Оглавление</a>."
    ]
@@ -84,18 +84,104 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Поиск минимума"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 84, -32,  25, -76, -28, -84,  59, -67,  16,  -2])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(low=-100, high=100, size=10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-64, -14, -14,  -9,  -9,  41,  42,  56,  58,  75])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Пузырьковая сортировка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 46, -14,  -9,  56,  42, -64,  75,  -9,  58,  41])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(low=-100, high=100, size=10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-64, -14, -14,  -9,  -9,  41,  42,  56,  58,  75])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(a)):\n",
+    "    for j in range(i, len(a)):\n",
+    "        if a[i]>a[j]:\n",
+    "            tmp = a[i]\n",
+    "            a[i] = a[j]\n",
+    "            a[j] = tmp\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
@@ -466,7 +552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
