--- a/практика/100 примеров/100 questions Python.ipynb
+++ b/практика/100 примеров/100 questions Python.ipynb
@@ -1,27 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 100 задач в python\n",
     "<p>Курс \"Большие данные и машинное обучение\" ООО \"Сайберлимфа\"</p>\n",
     "\n",
-    "Авторы\n",
-    "\n",
+    "Авторы:\n",
     "<p>Чернышов Юрий</p>\n",
-    "<p>Руководитель исследовательского центра, ychernyshov@cyberlympha.com</p>\n",
+    "<p>Руководитель исследовательского центра, ychernyshov@cyberlympha.com, ychernyshov@ussc.ru</p>\n",
     "<p>к.ф.-м.н., доцент кафедры УрГУПС и УрФУ (Екатеринбург), yuchernyshov@usurt.ru</p>"
    ]
   },
@@ -60,7 +48,9 @@
     "        <li><a href='#env'>Работа с системным окружением (модули os, multiprocessing)</a></li>\n",
     "        <li><a href='#time'>Работа со временем (модуль time)</a></li>\n",
     "        <li><a href='#regexp'>Регулярные выражения (модуль re)</a></li>\n",
+    "        <li><a href='#click'>Создание утилит командной строки (модуль click)</a></li>\n",
     "        <li><a href='#calendar'>Работа с календарем (модуль calendar)</a></li>\n",
+    "        <li><a href='#network'>Работа с сетью</a></li>\n",
     "     </ol>\n",
     "<li><a href='#async'>Асинхронность</a></li>\n",
     "<li><a href='#magic'>Магические команды</a></li>\n",
@@ -96,14 +86,14 @@
     "\n",
     "Python - интерпретируемый язык программирования. Программа Python (также используется термин \"скрипт\") состоит из команд, которые последовательно выполняются интерптетатором Python.\n",
     "\n",
-    "Python проигрывает в скорости выполнения программ компилируемым языкам программирования (например, C), но имеет ряд преимуществ - наглядность, простота, лаконичность, популярность. Для быстрого предварительного исследования, моделирования, проверки гипотез, визуализации использование Python предпочтительнее."
+    "Python проигрывает в скорости выполнения программ компилируемым языкам программирования (например, C), но имеет ряд преимуществ - наглядность, простота, лаконичность, широкая поддержка сообществом. Для быстрого предварительного исследования, моделирования, проверки гипотез, визуализации использование Python предпочтительнее."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python похож на многие языки программирования, содержит стандартные элементы управления выполнением программы (функции, условный оператор, цикл). Одна из особенностей, к которой надо привыкнуть: тело цикла или функции отделяется отступами слева (обычно принято использовать четыре пробела). Остальной синтаксис интуитивно понятен из примеров ниже."
+    "Python похож на многие языки программирования, содержит стандартные элементы управления выполнением программы (функции, условный оператор, цикл). Одна из особенностей, к которой надо привыкнуть: тело цикла или функции отделяется отступами слева (обычно принято использовать четыре пробела). Основной синтаксис похож на другие языки программирования и интуитивно понятен из примеров ниже."
    ]
   },
   {
@@ -131,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Создание переменной"
+    "#### Создание и инициализация переменной"
    ]
   },
   {
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +194,7 @@
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a)\n",
+    "\n",
     "a[1] = 22\n",
     "print(a)"
    ]
@@ -213,6 +204,29 @@
    "metadata": {},
    "source": [
     "#### Создание и использование словаря"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = dict()\n",
+    "d['a'] = 1\n",
+    "d['b'] = 2\n",
+    "d"
    ]
   },
   {
@@ -245,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "(4, 16)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +277,7 @@
     "def f(p):\n",
     "    return p**2\n",
     "\n",
-    "f(2)"
+    "f(2), f(f(2))"
    ]
   },
   {
@@ -275,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +302,7 @@
    ],
    "source": [
     "c = 2\n",
-    "if c==1:\n",
+    "if c == 1:\n",
     "    print('да')\n",
     "else:\n",
     "    print('нет')"
@@ -321,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +348,7 @@
    ],
    "source": [
     "i = 0\n",
-    "while i<5:\n",
+    "while i < 5:\n",
     "    print(i**2, end=\" \")\n",
     "    i += 1"
    ]
@@ -348,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Создание объектов"
+    "#### Создание классов и объектов"
    ]
   },
   {
@@ -458,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -516,13 +530,30 @@
        "(5, int)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b, type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{b}')"
    ]
   },
   {
@@ -573,9 +604,6 @@
    "source": [
     "#но лучше многострочный комментарий \n",
     "#делать так\n",
-    "#asdf\n",
-    "#asdf\n",
-    "#asdf\n",
     "#asdf\n",
     "#asdf"
    ]
@@ -967,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -976,13 +1004,13 @@
        "False"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2*2==5"
+    "2*2 == 5"
    ]
   },
   {
@@ -1007,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1048,7 @@
    ],
    "source": [
     "for x in range(10):\n",
-    "    if x%3:\n",
+    "    if x % 3:\n",
     "        print(\"Да\", end=\", \")\n",
     "    else:\n",
     "        print(\"Нет\", end=\", \")"
@@ -1127,19 +1155,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'function'> <function f at 0x7ff767160670> <function f at 0x7ff767160670>\n",
-      "<class 'function'> <function <lambda> at 0x7ff775583f70> <function <lambda> at 0x7ff775583f70>\n",
+      "<class 'function'> <function f at 0x00000282327B7CA0> <function f at 0x00000282327B7CA0>\n",
+      "<class 'function'> <function <lambda> at 0x00000282327B7430> <function <lambda> at 0x00000282327B7430>\n",
       "<class 'list'> [1, 2, 3] [1, 2, 3]\n",
       "<class 'tuple'> (1, 2, 3) (1, 2, 3)\n",
       "<class 'str'> '123' 123\n",
       "<class 'dict'> {'a': 1, 'b': 2, 'c': 3} {'a': 1, 'b': 2, 'c': 3}\n",
       "<class 'set'> {1, 2, 3} {1, 2, 3}\n",
-      "<class 'generator'> <generator object <genexpr> at 0x7ff767159eb0> <generator object <genexpr> at 0x7ff767159eb0>\n"
+      "<class 'generator'> <generator object <genexpr> at 0x00000282329465F0> <generator object <genexpr> at 0x00000282329465F0>\n"
      ]
     }
    ],
    "source": [
-    "a=[]\n",
+    "a = []\n",
     "def f():\n",
     "    return 123\n",
     "a.append(f)\n",
@@ -1948,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1979,6 +2007,26 @@
    ],
    "source": [
     "print(max(a), min(a), sum(a), len(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 4, 2, 5, 3, 6], 5)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, a.index(6)"
    ]
   },
   {
@@ -2172,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2236,7 @@
     "a = (1, 3, 4)\n",
     "print(a[1])\n",
     "try:\n",
-    "    a[1]=2\n",
+    "    a[1] = 2\n",
     "except:\n",
     "    print(\"Tuple can not be changed\")"
    ]
@@ -2216,11 +2264,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "s = {'Alexander': 1, 'Daniil': 2, 'Yury': 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Alexander': 1, 'Daniil': 2, 'Yury': 3}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1, 3, 2'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"{Alexander}, {Yury}, {Daniil}\".format(**s)"
    ]
   },
   {
@@ -2319,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2328,13 +2416,13 @@
        "[1, 2, 2, 1, 0]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = {'a': 1, 'b':2}\n",
+    "d = {'a': 1, 'b': 2}\n",
     "[d.get(data, 0) for data in \"abbac\"]"
    ]
   },
@@ -2452,9 +2540,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2671,6 +2757,7 @@
    "source": [
     "def fSquare(x):\n",
     "    return x**2\n",
+    "\n",
     "print(fSquare(10))\n",
     "print([fSquare(i) for i in range(11)])\n",
     "print(type(fSquare))"
@@ -2831,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2840,13 +2927,13 @@
        "(1, 0)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = lambda x: 0 if x>5 else x\n",
+    "f = lambda x: 0 if x > 5 else x\n",
     "f(1), f(10)"
    ]
   },
@@ -2859,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2871,7 +2958,7 @@
     }
    ],
    "source": [
-    "print([(lambda x: 1 if x%2 else 0)(i) for i in range(10)])"
+    "print([(lambda x: 1 if x % 2 else 0)(i) for i in range(10)])"
    ]
   },
   {
@@ -5056,7 +5143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Работа с системным окружением <a name='env'></a>"
+    "## Работа с системным окружением <a name='env'></a>"
    ]
   },
   {
@@ -5068,7 +5155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5084,16 +5171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/ychernyshov/git/Data-Science-Course-USURT/lessons'"
+       "'C:\\\\Users\\\\ychernyshov\\\\Documents\\\\GitHub\\\\Data-Science-Course\\\\практика\\\\100 примеров'"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5156,6 +5243,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ALLUSERSPROFILE', 'APPDATA', 'COMMONPROGRAMFILES', 'COMMONPROGRAMFILES(X86)', 'COMMONPROGRAMW6432', 'COMPUTERNAME', 'COMSPEC', 'CONDA_DEFAULT_ENV', 'CONDA_EXE', 'CONDA_PROMPT_MODIFIER', 'CONDA_PYTHON_EXE', 'CONDA_SHLVL', 'DRIVERDATA', 'HOMEDRIVE', 'HOMEPATH', 'LOCALAPPDATA', 'LOGONSERVER', 'NUMBER_OF_PROCESSORS', 'OS', 'PATH', 'PATHEXT', 'PROCESSOR_ARCHITECTURE', 'PROCESSOR_IDENTIFIER', 'PROCESSOR_LEVEL', 'PROCESSOR_REVISION', 'PROGRAMDATA', 'PROGRAMFILES', 'PROGRAMFILES(X86)', 'PROGRAMW6432', 'PROMPT', 'PSMODULEPATH', 'PUBLIC', 'PYCHARM COMMUNITY EDITION', 'SYSTEMDRIVE', 'SYSTEMROOT', 'TEMP', 'TMP', 'USERDNSDOMAIN', 'USERDOMAIN', 'USERDOMAIN_ROAMINGPROFILE', 'USERNAME', 'USERPROFILE', 'VBOX_MSI_INSTALL_PATH', 'WINDIR', 'CONDA_PREFIX', 'CONDA_ROOT', 'PYDEVD_USE_FRAME_EVAL', 'JPY_INTERRUPT_EVENT', 'IPY_INTERRUPT_EVENT', 'JPY_PARENT_PID', 'TERM', 'CLICOLOR', 'PAGER', 'GIT_PAGER', 'MPLBACKEND'])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(os.environ).keys()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 204,
    "metadata": {},
    "outputs": [
@@ -5169,6 +5277,33 @@
    ],
    "source": [
     "print(os.environ.get('PATH'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Получить пользовательское имя"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ychernyshov'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getlogin()"
    ]
   },
   {
@@ -5225,6 +5360,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Работа с модулем sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'little'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.byteorder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'win32'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.platform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getsizeof(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sys.version_info(major=3, minor=9, micro=7, releaselevel='final', serial=0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.version_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a href='#toc'>Назад к Оглавлению</a>"
    ]
   },
@@ -5232,7 +5463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Работа со временем (модуль time) <a name='time'></a>"
+    "## Работа со временем (модуль time) <a name='time'></a>"
    ]
   },
   {
@@ -5318,7 +5549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Регулярные выражения <a name='regexp'></a>"
+    "## Регулярные выражения <a name='regexp'></a>"
    ]
   },
   {
@@ -5498,7 +5729,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Работа с календарем <a name='calendar'></a>"
+    "<a href='#toc'>Назад к Оглавлению</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Работа с календарем <a name='calendar'></a>"
    ]
   },
   {
@@ -5764,7 +6004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Работа с сетью <a name='network'></a>"
+    "## Работа с сетью <a name='network'></a>"
    ]
   },
   {
@@ -7167,7 +7407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -7181,9 +7421,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
